(chore): icon change for compose - closes #3042

--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -17,8 +17,8 @@
   >
     <m-icon
       class="m-composerToolbarItem__icon"
-      from="ion"
-      iconId="image"
+      from="md"
+      iconId="publish"
     ></m-icon>
     <span class="m-composerToolbarItem__label" i18n>Upload</span>
   </m-file-upload>
