--- a/src/app/common/components/overlay-modal/overlay-modal.component.scss
+++ b/src/app/common/components/overlay-modal/overlay-modal.component.scss
@@ -30,6 +30,8 @@
 
     &.m-overlayModal--remind {
       width: 520px;
+      max-width: 90%;
+      min-width: 0;
       padding: 0;
       border-radius: 0;
 
