(chore): change composer icon

--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -18,7 +18,7 @@
     <m-icon
       class="m-composerToolbarItem__icon"
       from="md"
-      iconId="publish"
+      iconId="cloud_upload"
     ></m-icon>
     <span class="m-composerToolbarItem__label" i18n>Upload</span>
   </m-file-upload>
