--- a/src/app/modules/composer/topbar-button/topbar-button.component.html
+++ b/src/app/modules/composer/topbar-button/topbar-button.component.html
@@ -1,6 +1,11 @@
 <span class="m-composer__topbarButton" (click)="onClick($event)">
   <m-tooltip>
-    <m-icon from="custom" iconId="composer" m-tooltip--icon></m-icon>
+    <m-icon
+      from="md"
+      iconId="cloud_upload"
+      sizeFactor="75"
+      m-tooltip--icon
+    ></m-icon>
     Speak your mind
   </m-tooltip>
 </span>
