(chore): if not channels or groups to display, hide widget - closes #1501

--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -218,4 +218,8 @@ m-newsfeed {
   m-activity {
     margin-bottom: 20px;
   }
+
+  m-suggestions__sidebar > m-sidebarWidget {
+    margin-bottom: 20px;
+  }
 }
