(chore): hide the tokens section from channels

--- a/src/app/modules/channels/v2/about/extra-info.component.html
+++ b/src/app/modules/channels/v2/about/extra-info.component.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="m-channelAbout__field m-channelAbout__field--fullWidth">
+  <!-- <div class="m-channelAbout__field m-channelAbout__field--fullWidth">
     <div class="m-channelAboutField__label" i18n>
       Accepted Payment Methods
     </div>
@@ -89,5 +89,5 @@
     <div class="m-channelAboutField__content">
       {{ service.tokensSent$ | async | token: 18 | number }}
     </div>
-  </div>
+  </div> -->
 </ng-container>
