--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -11,7 +11,10 @@
 >
   <div class="m-activityContent__messageWrapper">
     <span [innerHtml]="message | tags"></span>
-    <m-read-more--button [v2]="true"></m-read-more--button>
+    <m-read-more--button
+      [v2]="true"
+      [redirectUrl]="getRedirectUrl()"
+    ></m-read-more--button>
   </div>
   <!-- (onTranslateInit)="propagateTranslation($event)" -->
   <m-translate
