--- a/src/app/modules/channels/v2/actions/actions.component.html
+++ b/src/app/modules/channels/v2/actions/actions.component.html
@@ -1,5 +1,6 @@
 <div class="m-channel__actions">
   <ng-container *ngIf="service.isOwner$ | async; else nonOwner">
+    <m-channelActions__boost></m-channelActions__boost>
     <m-channelActions__edit></m-channelActions__edit>
   </ng-container>
   <ng-template #nonOwner>
