(fix): analytics mouse events and loading spinner - closes #2892 #3069

--- a/src/app/modules/analytics/v2/dashboard.component.html
+++ b/src/app/modules/analytics/v2/dashboard.component.html
@@ -18,6 +18,8 @@
     </div>
   </ng-template>
 
+  <m-loadingSpinner [inProgress]="loading$ | async"></m-loadingSpinner>
+
   <div class="m-analyticsDashboard" *ngIf="ready$ | async">
     <m-dashboardLayout>
       <ng-container m-dashboardLayout__header>
