(chore): implement new compose icon

--- a/src/app/modules/composer/topbar-button/topbar-button.component.html
+++ b/src/app/modules/composer/topbar-button/topbar-button.component.html
@@ -1,9 +1,9 @@
 <span class="m-composer__topbarButton" (click)="onClick($event)">
   <m-tooltip>
     <m-icon
-      from="md"
-      iconId="cloud_upload"
-      sizeFactor="75"
+      from="assets-file"
+      iconId="assets/icons/compose.svg"
+      [sizeFactor]="150"
       m-tooltip--icon
     ></m-icon>
     Speak your mind
