--- a/src/app/modules/search/bar.component.html
+++ b/src/app/modules/search/bar.component.html
@@ -18,7 +18,7 @@
     class="mdl-textfield__input"
     type="text"
     id="search"
-    autocomplete="off"
+    autocomplete="chrome-off"
     [placeholder]="placeholder"
     #searchInput
   />
