(wip): Upgrade to Angular 9 and fix template issues

--- a/src/app/modules/hashtags/topbar/topbar.component.html
+++ b/src/app/modules/hashtags/topbar/topbar.component.html
@@ -33,10 +33,9 @@
     <li class="m-dropdown--list--item">
       <span
         class="m-topbar--navigation--item m-topbar--hashtags--select-more"
-        i18n="@@MINDS__NEWSFEED__TOPBAR__SUGGESTED_MORE"
         (click)="openModal()"
       >
-        MORE
+        <ng-container i18n>MORE</ng-container>
         <m-tooltip
           icon="help"
           i18n="@@MINDS__HASHTAGS__TOPBAR__SUGGESTED_MORE_TOOLTIP"
@@ -70,10 +69,9 @@
 
   <span
     class="m-topbar--navigation--item m-topbar--hashtags--select-more"
-    i18n="@@MINDS__NEWSFEED__TOPBAR__SUGGESTED_MORE"
     (click)="openModal()"
   >
-    MORE
+    <ng-container>MORE</ng-container>
     <m-tooltip
       icon="help"
       i18n="@@MINDS__HASHTAGS__TOPBAR__SUGGESTED_MORE_TOOLTIP"
