--- a/src/app/modules/media/youtube-migration/marketing/marketing.component.html
+++ b/src/app/modules/media/youtube-migration/marketing/marketing.component.html
@@ -55,29 +55,29 @@
           <h2 i18n>Monetize your content</h2>
 
           <p class="m-marketing__description" i18n>
-            Everyone earns <a routerLink="/token" i18n>Minds Tokens</a> based on
+            Everyone earns <a routerLink="/token">Minds Tokens</a> based on
             their daily contribution to the network, which can be used to boost
             your content and grow your audience.
           </p>
 
           <p class="m-marketing__description" i18n>
-            <a routerLink="/plus" i18n>Minds Plus</a> and
-            <a routerLink="/pro" i18n>Pro</a> members unlock additional
-            monetization features, including revenue-sharing and monthly cash
-            payments for pageviews and referrals.
+            <a routerLink="/plus">Minds Plus</a> and
+            <a routerLink="/pro">Pro</a> members unlock additional monetization
+            features, including revenue-sharing and monthly cash payments for
+            pageviews and referrals.
           </p>
 
           <ul class="m-marketing__points">
             <li i18n>
               If you have over 1,000 YouTube subscribers,
-              <a routerLink="/plus" i18n
+              <a routerLink="/plus"
                 >claim a free annual subscription to Minds Plus</a
               >.
             </li>
 
             <li i18n>
               If you have over 10,000 YouTube subscribers,
-              <a routerLink="/pro" i18n
+              <a routerLink="/pro"
                 >claim a free annual subscription to Minds Pro</a
               >.
             </li>
