--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -14,7 +14,7 @@
           A new revenue model for <em>creators</em>
         </h2>
 
-        <ul class="m-marketing__points" i18n>
+        <ul class="m-marketing__points">
           <li i18n>Get paid for your traffic and referrals</li>
           <li i18n>Launch your own website</li>
           <li i18n>
