--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -224,8 +224,8 @@
 
     <div class="m-form__field--radio">
       <div class="m-form__row--label">
-        <label i18n
-          >Tiles Aspect Ratio
+        <label>
+          <ng-container i18n>Tiles Aspect Ratio</ng-container>
           <m-tooltip
             ><span m-tooltip--anchor>𝒊</span>
             <ng-container i18n
