--- a/src/app/modules/hashtags/topbar-selector/topbar-selector.component.html
+++ b/src/app/modules/hashtags/topbar-selector/topbar-selector.component.html
@@ -37,10 +37,9 @@
     <li class="m-dropdown--list--item">
       <span
         class="m-topbar--navigation--item m-topbar--hashtags--select-more"
-        i18n="@@MINDS__NEWSFEED__TOPBAR__SUGGESTED_MORE"
         (click)="openModal()"
       >
-        MORE
+        <ng-container i18n>MORE</ng-container>
         <m-tooltip
           icon="help"
           i18n="@@MINDS__HASHTAGS__TOPBAR__SUGGESTED_MORE_TOOLTIP"
@@ -78,10 +77,9 @@
 
   <span
     class="m-topbar--navigation--item m-topbar--hashtags--select-more"
-    i18n="@@MINDS__NEWSFEED__TOPBAR__SUGGESTED_MORE"
     (click)="openModal()"
   >
-    MORE
+    <ng-container i18n>MORE</ng-container>
     <m-tooltip
       icon="help"
       i18n="@@MINDS__HASHTAGS__TOPBAR__SUGGESTED_MORE_TOOLTIP"
