--- a/src/app/modules/settings-v2/pro/general/general.component.html
+++ b/src/app/modules/settings-v2/pro/general/general.component.html
@@ -58,9 +58,9 @@
         <label
           for="publish"
           class="m-form__customInputWrapper__checkbox"
-          i18n
           (click)="onEnableProThemeClick($event)"
-          >Enable Pro theme
+        >
+          <ng-container i18n>Enable Pro theme</ng-container>
           <m-tooltip>
             <span m-tooltip--anchor>𝒊</span>
             <ng-container i18n
