--- a/src/app/modules/channels/v2/list/groups.component.html
+++ b/src/app/modules/channels/v2/list/groups.component.html
@@ -1,1 +1,5 @@
-<m-channel__list [feedsService]="feed"></m-channel__list>
+<m-channel__list
+  [feedsService]="feed"
+  [canSearch]="true"
+  (onSearch)="searchQuery$.next($event)"
+></m-channel__list>
