--- a/src/app/modules/channels/v2/list/list.component.html
+++ b/src/app/modules/channels/v2/list/list.component.html
@@ -18,11 +18,21 @@
 
 <div class="m-pageLayout__container m-channel__list">
   <div class="m-channelList__list" m-pageLayout__pane="main">
+    <div *ngIf="canSearch" class="m-channelListList__searchBox">
+      <input
+        type="text"
+        placeholder="Filter..."
+        [(ngModel)]="query"
+        (keyup)="search()"
+        i18n-placeholder
+      />
+    </div>
+
     <div class="m-channelListList__entities">
-      <m-newsfeed__entity
+      <m-discovery__feedItem
         *ngFor="let entity$ of feedsService.feed | async"
         [entity]="entity$ | async"
-      ></m-newsfeed__entity>
+      ></m-discovery__feedItem>
 
       <!-- <m-discovery__feedItem
         *ngFor="let entity$ of feedsService.feed | async"
