--- a/src/app/modules/channels/v2/list/list.component.scss
+++ b/src/app/modules/channels/v2/list/list.component.scss
@@ -6,11 +6,39 @@
       padding: 20px;
     }
   }
+
+  .m-channelList__list {
+    padding: 0;
+  }
 }
 
 .m-channel__list {
-  m-newsfeed__entity {
+  .m-channelListList__searchBox {
+    border-bottom: 1px solid;
+
+    @include m-theme() {
+      border-color: themed($m-borderColor--primary);
+    }
+
+    > input {
+      appearance: none;
+      padding: 20px 40px;
+      width: 100%;
+      background: transparent;
+      border: none;
+      box-sizing: border-box;
+
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+
+      @media screen and (max-width: $layoutMin3ColWidth) {
+        padding: 20px;
+      }
+    }
+  }
+
+  m-discovery__feedItem {
     display: block;
-    margin: 0 0 20px;
   }
 }
