--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,6 @@
 @import 'defaults';
 @import 'fonts';
-@import '~ng-pick-datetime/assets/style/picker.min.css';
+@import '~@danielmoncada/angular-datetime-picker/assets/style/picker.min.css';
 @import '../app/common/layout/layout';
 
 body.m-theme__light,
