(chore): New build flow

--- a/src/app/modules/settings/two-factor/two-factor.component.html
+++ b/src/app/modules/settings/two-factor/two-factor.component.html
@@ -19,7 +19,7 @@
   <!-- SETUP -->
   <div class="mdl-card__supporting-text" *ngIf="!inProgress && !telno">
     <div class="minds-settings-text">
-      <ng-container i18n="@@MINDS__SETTINGS__SMS_INPUT_HELP">
+      <ng-container>
         Your SMS number.
       </ng-container>
     </div>
