--- a/src/app/modules/translate/translate.html
+++ b/src/app/modules/translate/translate.html
@@ -44,10 +44,7 @@
         <i class="material-icons m-material-icons-inline">public</i>
         <ng-container i18n="@@TRANSLATE__TRANSLATING_LABEL"
           >Translating</ng-container
-        ><span
-          *ngIf="translation.target"
-          i18n="Translation target@@TRANSLATE__TRANSLATING_TO_PART"
-        >
+        ><span *ngIf="translation.target" i18n="Translation target">
           to {{ translation.target }}</span
         >&hellip;
       </div>
@@ -64,10 +61,7 @@
         >
         <ng-container i18n="@@TRANSLATE__TRANSLATED_LABEL"
           >Translated</ng-container
-        ><span
-          *ngIf="translation.source"
-          i18n="Translation source@@TRANSLATE__TRANSLATED_FROM_PART"
-        >
+        ><span *ngIf="translation.source" i18n="Translation source">
           from {{ translation.source }}</span
         ><span> - </span>
         <ng-container *ngIf="!hasNav2020">
