(fix): channel performance tweaks

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -39,7 +39,7 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <m-channelAbout__brief></m-channelAbout__brief>
-        <m-channelShop__brief></m-channelShop__brief>
+        <m-channelShop__brief *mIfBrowser></m-channelShop__brief>
       </div>
     </div>
   </div>
