clean up referrals v2 tooltips and styles

--- a/src/app/modules/settings-v2/other/referrals/links/links.component.html
+++ b/src/app/modules/settings-v2/other/referrals/links/links.component.html
@@ -14,7 +14,7 @@
     </p>
 
     <div
-      class="m-settingsV2__referralsLinks__copyableLink m-border"
+      class="m-settingsV2__referralsLinks__copyableLink"
       [class.focused]="registerUrlFocused"
       (click)="applyFocus(registerUrlEl, 'registerUrl')"
     >
@@ -52,7 +52,7 @@
       link you share
     </p>
     <div
-      class="m-settingsV2__referralsLinks__copyableLink m-border"
+      class="m-settingsV2__referralsLinks__copyableLink"
       [class.focused]="referrerParamFocused"
       (click)="applyFocus(referrerParamEl, 'referrerParam')"
     >
