--- a/src/app/modules/auth/auth.module.scss
+++ b/src/app/modules/auth/auth.module.scss
@@ -39,6 +39,10 @@ m-body m-login.m-login--newDesign {
       .m-marketing__sep {
         display: none;
       }
+
+      .m-marketingFooter__languageBar {
+        margin-bottom: 42px;
+      }
     }
 
     .m-grid.m-marketingFooter__columns:last-child > * {
