--- a/src/app/common/components/marketing/footer.component.html
+++ b/src/app/common/components/marketing/footer.component.html
@@ -1,4 +1,17 @@
 <div class="m-marketing__footer">
+  <div class="m-marketingFooter__columns">
+    <div class="m-marketingFooter__languageBar">
+      <m-language__bar
+        *ngIf="features.has('localization-2020')"
+      ></m-language__bar>
+
+      <div
+        *ngIf="features.has('localization-2020')"
+        class="m-marketing__sep m-marketing__sep--dashed m-marketing__sep--big"
+      ></div>
+    </div>
+  </div>
+  <!--Main body & links-->
   <div class="m-grid m-marketingFooter__columns">
     <div
       class="m-grid__column-4 m-grid__column-12--mobile m-marketingFooter__column m-marketingFooter__brandColumn"
