Changed wording on NSFW option #2838

--- a/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
+++ b/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
@@ -8,7 +8,7 @@
               for="mature"
               class="m-form__customInputWrapper__checkbox"
               i18n
-              >Always show NSFW content masks (18+)
+              >Always show NSFW content (18+)
               <input
                 type="checkbox"
                 id="mature"
